--- a/cfg/train_scenecollisionnet.yaml
+++ b/cfg/train_scenecollisionnet.yaml
@@ -1,7 +1,7 @@
 model:
   name: scene_coll_net
   type: SceneCollisionNet  # Options: SceneCollisionNet or PointNetGrid
-  path: /models
+  path: /home/nutzio/Projects/SceneCollisionNet/models
   bounds:
     - [-0.5, -0.8, -0.06]
     - [0.5, 0.8, 0.3]
@@ -12,14 +12,14 @@ trainer:
   num_workers: 4          # defaults to os.cpu_count() if not specified
   train_iterations: 1000
   val_iterations: 250
-  epochs: 1000
+  epochs: 85
   lr: 0.001
   momentum: 0.9
   loss_pct: 0.1
 
 dataset:
-  meshes: /dataset
-  batch_size: 1
+  meshes: /home/nutzio/Projects/SceneCollisionNet/datasets/shapenet
+  batch_size: 12
   query_size: 2048
   n_obj_points: 1024
   n_scene_points: 32768
