--- a/environment.yml
+++ b/environment.yml
@@ -1,91 +1,94 @@
-name: SceneCollisionNet
+name: SCN_2
 channels:
-  - anaconda
+  - pyg
+  - pytorch-lts
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=2_gnu
-  - binutils_impl_linux-64=2.36.1=h193b22a_2
-  - ca-certificates=2021.10.8=ha878542_0
-  - certifi=2021.10.8=py38h578d9bd_2
-  - gcc=8.5.0=h143be6b_9
-  - gcc_impl_linux-64=8.5.0=hb55b52c_16
-  - gxx=8.5.0=h143be6b_9
-  - gxx_impl_linux-64=8.5.0=hb55b52c_16
-  - intel-openmp=2022.0.1=h06a4308_3633
-  - kernel-headers_linux-64=2.6.32=he073ed8_15
-  - ld_impl_linux-64=2.36.1=hea4e1c9_2
+  - _libgcc_mutex=0.1=main
+  - _openmp_mutex=5.1=1_gnu
+  - blas=1.0=mkl
+  - ca-certificates=2022.5.18.1=ha878542_0
+  - certifi=2022.5.18.1=py38h06a4308_0
+  - cudatoolkit=11.1.1=ha002fc5_10
+  - cudatoolkit-dev=11.1.1=py38h497a2fe_0
+  - intel-openmp=2021.4.0=h06a4308_3561
+  - ld_impl_linux-64=2.38=h1181459_1
   - libffi=3.3=he6710b0_2
-  - libgcc-devel_linux-64=8.5.0=h82e8279_16
-  - libgcc-ng=11.2.0=h1d223b6_16
-  - libgomp=11.2.0=h1d223b6_16
-  - libsanitizer=8.5.0=h70fd0c9_16
-  - libstdcxx-devel_linux-64=8.5.0=h82e8279_16
-  - libstdcxx-ng=11.2.0=he4da1e4_16
-  - mkl=2022.0.1=h06a4308_117
+  - libgcc-ng=11.2.0=h1234567_0
+  - libgomp=11.2.0=h1234567_0
+  - libstdcxx-ng=11.2.0=h1234567_0
+  - libuv=1.40.0=h7b6447c_0
+  - mkl=2021.4.0=h06a4308_640
+  - mkl-service=2.4.0=py38h7f8727e_0
+  - mkl_fft=1.3.1=py38hd3c417c_0
+  - mkl_random=1.2.2=py38h51133e4_0
   - ncurses=6.3=h7f8727e_2
-  - openssl=1.1.1n=h166bdaf_0
+  - ninja=1.10.2=h06a4308_5
+  - ninja-base=1.10.2=hd09550d_5
+  - numpy=1.22.3=py38he7a7128_0
+  - numpy-base=1.22.3=py38hf524024_0
+  - openssl=1.1.1o=h7f8727e_0
   - pip=21.2.4=py38h06a4308_0
   - python=3.8.13=h12debd9_0
   - python_abi=3.8=2_cp38
+  - pytorch=1.8.2=py3.8_cuda11.1_cudnn8.0.5_0
+  - pytorch-scatter=2.0.8=py38_torch_1.8.0_cu111
   - readline=8.1.2=h7f8727e_1
   - setuptools=61.2.0=py38h06a4308_0
-  - sqlite=3.38.2=hc218d9a_0
-  - sysroot_linux-64=2.12=he073ed8_15
-  - tk=8.6.11=h1ccaba5_0
+  - six=1.16.0=pyhd3eb1b0_1
+  - sqlite=3.38.3=hc218d9a_0
+  - tk=8.6.11=h1ccaba5_1
+  - typing_extensions=4.1.1=pyh06a4308_0
   - wheel=0.37.1=pyhd3eb1b0_0
-  - xz=5.2.5=h7b6447c_0
+  - xz=5.2.5=h7f8727e_1
   - zlib=1.2.12=h7f8727e_2
   - pip:
     - autolab-core==1.1.1
-    - cmake==3.22.4
     - colorlog==6.6.0
     - cycler==0.11.0
-    - cython==0.29.28
-    - dill==0.3.4
-    - distro==1.7.0
-    - fonttools==4.33.2
+    - cython==0.29.30
+    - decorator==5.1.1
+    - dill==0.3.5.1
+    - fonttools==4.33.3
     - freetype-py==2.3.0
-    - h5py==3.6.0
-    - imageio==2.18.0
+    - h5py==3.7.0
+    - imageio==2.19.2
     - joblib==1.1.0
-    - kaolin==0.0
+#    - kaolin==0.9.0
     - kiwisolver==1.4.2
     - lxml==4.8.0
-    - matplotlib==3.5.1
-    - multiprocess==0.70.12.2
+    - matplotlib==3.5.2
+    - multiprocess==0.70.13
     - natsort==8.1.0
-    - networkx==2.8
-    - numpy==1.22.3
+    - networkx==2.2
     - opencv-python==4.5.5.64
     - packaging==21.3
     - pandas==1.4.2
-    - pillow==9.1.0
-    - pointnet2==0.0.1
+    - pillow==9.1.1
+#    - pointnet2==0.0.1
     - pycollada==0.6
     - pygifsicle==1.0.5
-    - pyglet==1.5.23
+    - pyglet==1.5.26
     - pyopengl==3.1.0
-    - pyparsing==3.0.8
+    - pyparsing==3.0.9
     - pyrender==0.1.45
+    - python-dateutil==2.8.2
     - python-fcl==0.6.1
     - pytz==2022.1
     - pywavelets==1.3.0
     - ruamel-yaml==0.17.21
     - ruamel-yaml-clib==0.2.6
-    - scikit-build==0.14.1
     - scikit-image==0.19.2
-    - scikit-learn==1.0.2
-    - scipy==1.8.0
+    - scikit-learn==1.1.1
+    - scipy==1.5.2
     - seaborn==0.11.2
     - setproctitle==1.2.3
     - threadpoolctl==3.1.0
-    - tifffile==2022.4.26
-    - torch==1.8.1+cu102
-    - torch-scatter==2.0.9
+    - tifffile==2022.5.4
+    - torch==1.8.2
     - tqdm==4.64.0
-    - trimesh==3.10.8
-    - typing-extensions==4.2.0
+    - trimesh==3.12.5
     - urdfpy==0.0.22
-prefix: /home/kit/anthropomatik/lh4704/.conda/envs/SceneCollisionNet
+prefix: /home/i53/mitarbeiter/n_schreiber/miniconda3/envs/SceneCollisionNet
+
